# nepse-smart

./: .dockerignore  .env.example  .gitignore  API_REFERENCE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.backend  IMPROVEMENT_IDEAS.md  MIGRATION_COMPLETE.md  Notes.txt  README.md  activate.sh  claude.md  create_tables.py  docker-compose.prod.yml  docker-compose.yml  docker-test.sh  export_all_csv.sh  ideas.md  inspect_table.py  package.json  pnpm-lock.yaml  requirements.txt  setup.sh  setup_portfolio.sh  technicals_api.py  test-solution.sh
.github/workflows/: daily-scraping.yml  data-collection.yml  data-validation.yml  parallel-scraping.yml  reusable-scraper.yml
.nuxt/: app.config.mjs  components.d.ts  eslint.config.d.mts  eslint.config.mjs  imports.d.ts  nitro.json  nuxt.d.ts  nuxt.json  nuxt.node.d.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.server.json  tsconfig.shared.json
.nuxt/dev/: index.mjs  index.mjs.map
.nuxt/manifest/: latest.json
.nuxt/types/: app.config.d.ts  build.d.ts  imports.d.ts  modules.d.ts  nitro-imports.d.ts  nitro-routes.d.ts  plugins.d.ts
api/: README.md  pyproject.toml  requirements.txt
api/nepse/: __init__.py
backend/: .dockerignore  Dockerfile  Historical Price and Volume SANIMA NABIL NIL.csv  agent_routes.py  agent_service.py  data_manager.py  database.py  init_db.py  main.py  main_enhanced.py  main_original_backup.py  migrate_to_own_data.py  models.py  nepse_data_service.py  papertrading_routes.py  portfolio_routes.py  requirements.txt  schemas.py  start.py
data-scraper/: README.md  cleanup_and_archive_old_data.py  cleanup_old_lookup_files.py  data_maintenance.py  data_manager.py  deduplicate_historical.py  generate_summary.py  generate_technicals.py  nepse_official_data_fetcher.py  production_companies.py  production_floorsheet.py  production_indices.py  production_macro.py  production_main.py  production_prices.py  production_scraper.py  requirements.txt  shared_utils.py
data/archive/: README.md
data/daily/: 2024_10_30_price_volume_history.json  2024_11_05_price_volume_history.json  2024_11_06_price_volume_history.json  2024_11_11_price_volume_history.json  2024_11_12_price_volume_history.json  2024_11_13_price_volume_history.json  2024_11_14_price_volume_history.json  2024_11_19_price_volume_history.json  2024_11_20_price_volume_history.json  2024_11_21_price_volume_history.json  2024_11_25_price_volume_history.json  (+1004 more)
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
langchain/: .gitignore  README.md  index.html  nepse_agent_backend.py  requirements.txt
scripts/: cleanup_json.py  create_mock_historical.py
(+648 files in other folders)
